@@ -1,57 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/file-4.19.ebuild,v 1.7 2007/02/08 02:30:42 metalgod Exp $
-
-EAPI="prefix"
-
-inherit eutils distutils libtool
-
-DESCRIPTION="identify a file's format by scanning binary data for patterns"
-HOMEPAGE="ftp://ftp.astron.com/pub/file/"
-SRC_URI="ftp://ftp.gw.com/mirrors/pub/unix/file/${P}.tar.gz
-	ftp://ftp.astron.com/pub/file/${P}.tar.gz"
-
-LICENSE="as-is"
-SLOT="0"
-KEYWORDS="~ppc-macos ~x86 ~x86-macos ~x86-solaris"
-IUSE="python"
-
-DEPEND=""
-
-src_unpack() {
-	unpack ${P}.tar.gz
-	cd "${S}"
-
-	epatch "${FILESDIR}"/${PN}-4.15-libtool.patch #99593
-
-	elibtoolize
-	epunt_cxx
-
-	# make sure python links against the current libmagic #54401
-	sed -i "/library_dirs/s:'\.\./src':'../src/.libs':" python/setup.py
-
-	# dont let python README kill main README #60043
-	mv python/README{,.python}
-}
-
-src_compile() {
-	econf --datadir=${EPREFIX}/usr/share/misc || die
-	emake || die "emake failed"
-
-	use python && cd python && distutils_src_compile
-}
-
-src_install() {
-	emake DESTDIR="${D}" install || die "make install failed"
-	dodoc ChangeLog MAINT README
-
-	use python && cd python && distutils_src_install
-}
-
-pkg_postinst() {
-	use python && distutils_pkg_postinst
-}
-
-pkg_postrm() {
-	use python && distutils_pkg_postrm
-}
