@@ -1,3 +1,0 @@
-MD5 a61ef3aa8339d5987148089afde25f60 file-4.19.tar.gz 546805
-RMD160 d8dbf2686eaef5bb1cb9467198acd3a4c5735ca7 file-4.19.tar.gz 546805
-SHA256 697250abdbcaf850728791a475a917d84287f7e2d67bab90021775db600c4d85 file-4.19.tar.gz 546805
