@@ -1,6 +1,15 @@
 # ChangeLog for sys-apps/file
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.122 2007/02/08 02:30:42 metalgod Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.125 2007/02/13 15:55:29 eroyf Exp $
+
+  13 Feb 2007; Alexander H. Færøy <eroyf@gentoo.org> file-4.19.ebuild:
+  Stable on MIPS; bug #165717
+
+  13 Feb 2007; Markus Rothe <corsair@gentoo.org> file-4.19.ebuild:
+  Stable on ppc64; bug #165717
+
+  10 Feb 2007; nixnut <nixnut@gentoo.org> ChangeLog:
+  Stable on ppc wrt bug 165717
 
   08 Feb 2007; Luis Medinas <metalgod@gentoo.org> file-4.19.ebuild:
   Stable on amd64. Bug #165717.
